// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ButtonLinkBox /> renders ButtonLinkBox 1`] = `
<div
  className="mfui-button-link-box mfui-button-link-box_h-align_center custom-class"
>
  <div
    className="mfui-button-link-box__row"
  >
    <Button
      disabledColor="gray"
      downColor="dark"
      hoverColor="purple"
      href="button-url"
      padding={true}
      passiveColor="purple"
      showSpinner={false}
      sizeAll="medium"
      type="button"
      width="auto"
    >
      button title
    </Button>
  </div>
  <div
    className="mfui-button-link-box__row"
  >
    <TextLink
      color="blue"
      href="link-url"
      underlineStyle="solid"
      underlineVisibility="always"
    >
      link title
    </TextLink>
  </div>
</div>
`;

exports[`<ButtonLinkBox /> renders ButtonLinkBox without button 1`] = `
<div
  className="mfui-button-link-box mfui-button-link-box_h-align_center custom-class"
>
  <div
    className="mfui-button-link-box__row"
  >
    <TextLink
      color="blue"
      href="link-url"
      underlineStyle="solid"
      underlineVisibility="always"
    >
      link title
    </TextLink>
  </div>
</div>
`;

exports[`<ButtonLinkBox /> renders ButtonLinkBox without link 1`] = `
<div
  className="mfui-button-link-box mfui-button-link-box_h-align_center custom-class"
>
  <div
    className="mfui-button-link-box__row"
  >
    <Button
      disabledColor="gray"
      downColor="dark"
      hoverColor="purple"
      href="button-url"
      padding={true}
      passiveColor="purple"
      showSpinner={false}
      sizeAll="medium"
      type="button"
      width="auto"
    >
      button title
    </Button>
  </div>
</div>
`;
